--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "dependencies": {
     "@grpc/grpc-js": "1.8.1",
-    "@nitric/sdk": "git+https://github.com/nitrictech/node-sdk#websocket-testing",
+    "@nitric/sdk": "https://github.com/nitrictech/node-sdk#websocket-testing",
     "@opentelemetry/api": "^1.4.1",
     "@opentelemetry/exporter-trace-otlp-http": "^0.36.1",
     "@opentelemetry/instrumentation": "^0.36.1",
@@ -15,9 +15,11 @@
     "@opentelemetry/resources": "^1.10.1",
     "@opentelemetry/sdk-trace-node": "^1.10.1",
     "@opentelemetry/semantic-conventions": "^1.10.1",
+    "@types/express": "^4.17.17",
     "@types/google-protobuf": "^3.15.6",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
+    "express": "^4.18.2",
     "google-protobuf": "3.14.0",
     "tslib": "^2.1.0"
   },
@@ -33,6 +35,7 @@
     "wait-port": "^1.0.1"
   },
   "scripts": {
+    "build": "yarn --cwd ./app build && cp -r ./app/build ./public",
     "dev:functions": "nodemon -r dotenv/config ./index.ts",
     "dev": "stmux -w always -e ERROR -M -m beep,system -- [ -t 'Nitric: Exit using ctrl^a+k' \"nitric start\" .. -t 'Functions' \"wait-port localhost:50051 && npm run dev:functions\" ]"
   }
