--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "wait-port": "^1.0.1"
   },
   "scripts": {
-    "build": "yarn --cwd ./app build && cp -r ./app/build ./public",
+    "build": "yarn --cwd ./app build && rm -rf ./public && cp -r ./app/build/ ./public",
     "dev:functions": "nodemon -r dotenv/config ./index.ts",
     "dev": "stmux -w always -e ERROR -M -m beep,system -- [ -t 'Nitric: Exit using ctrl^a+k' \"nitric start\" .. -t 'Functions' \"wait-port localhost:50051 && npm run dev:functions\" ]"
   }
